<resources>
    <string name="app_name">ProjectLectito</string>

    <string name="a"></string>

    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>

    <!-- View Texts -->
    <string name="view_texts__title">All Texts</string>
    <string name="view_texts__not_started">Not started</string>
    <string name="view_texts__no_content">No content</string>
    <string name="view_texts__no_content_error">Entry has no content, long press to add text</string>
    <string name="view_texts__submit_description">Search for word</string>
    <string name="view_texts__type_word_hint">Search for a word</string>
    <string name="view_texts__select_word_hint">Select a word</string>

    <!-- Add Snippet -->
    <string name="add_snippet__title">Add page</string>
    <string name="add_snippet__chapter">Chapter:</string>
    <string name="add_snippet__page">Page:</string>
    <string name="add_snippet__snippet_content_hint">Page text</string>
    <string name="add_snippet__duplicate_page_warning">Warning: there is already an entry with this page number</string>
    <string name="add_snippet__required_fields_warning">Error: required fields: %s</string>
    <string name="add_snippet__missing_field_content">page text</string>
    <string name="add_snippet__missing_field_page">page number</string>
    <string name="add_snippet__submit">Add</string>
    <string name="add_snippet__submit_and_another">Add and add another</string>
    <string name="add_snippet__no_title">Unknown Text</string>

    <!-- Read Sentence -->
    <string name="read_sentence__title">Read Sentence</string>
    <string name="read_sentence__common">common</string>
    <string name="read_sentence__other_forms_label">Other forms:</string>
    <string name="read_sentence__previous_definition">Previous definition</string>
    <string name="read_sentence__next_definition">Next definition</string>
    <string name="read_sentence__home">Home</string>
    <string name="read_sentence__full_text">Full text</string>
    <string name="read_sentence__previous_sentence">Previous sentence</string>
    <string name="read_sentence__next_sentence">Next sentence</string>
    <string name="read_sentence__no_definition">No word selected.\n%s</string>
    <string name="read_sentence__no_definition_auto">Click on a word to show its definition.</string>
    <string name="read_sentence__no_definition_select">Select a word and click the arrow to show its definition.</string>
    <string name="read_sentence__no_definition_type">Type in a word and click the arrow to show its definition.</string>
    <string name="read_sentence__parse_success">Sentence parsed succeeded</string>
    <string name="read_sentence__parse_failed">Sentence parse failed</string>
    <string name="read_sentence__select_mode_auto">Auto</string>
    <string name="read_sentence__select_mode_auto_with_colour">Auto (coloured)</string>
    <string name="read_sentence__select_mode_select">Select</string>
    <string name="read_sentence__select_mode_type">Type</string>

    <string name="err_read_sentence__no_more_sentences">No more sentences</string>
    <string name="err_read_sentence__no_more_definitions">No more definitions</string>

    <!-- Edit Snippet -->
    <string name="edit_snippet__title">Edit sentence</string>
    <string name="edit_snippet__input_hint">New sentence</string>


    <!-- Misc -->
    <string-array name="card_state_array">
        <item>Unseen</item>
    </string-array>
</resources>
