<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/text_add_snippet__text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:textSize="@dimen/medium_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="傭兵団の料理番"
        />

    <com.eywa.projectlectito.features.addSnippet.AddSnippetDetail
        android:id="@+id/layout_add_snippet__chapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_add_snippet__text_name"
        app:label="@string/add_snippet__chapter"
        app:hint="1"
        />

    <com.eywa.projectlectito.features.addSnippet.AddSnippetDetail
        android:id="@+id/layout_add_snippet__page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_add_snippet__chapter"
        app:label="@string/add_snippet__page"
        app:hint="1"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/text_add_snippet__content_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_add_snippet__page"
        >

        <EditText
            android:id="@+id/text_add_snippet__snippet_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/add_snippet__snippet_content_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minWidth="@dimen/touch_target"
            />
    </ScrollView>

    <TextView
        android:id="@+id/text_add_snippet__content_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:textColor="@color/read_sentence__warning_red"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_add_snippet__submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/err__required_field"
        />

    <Button
        android:id="@+id/button_add_snippet__submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_snippet__submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_add_snippet__submit_and_another"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_add_snippet__submit_and_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_snippet__submit_and_another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_add_snippet__submit"
        />
</androidx.constraintlayout.widget.ConstraintLayout>