<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    >

    <TextView
        android:id="@+id/text_edit_snippet__title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toTopOf="@+id/text_edit_snippet__page_ref"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1"
        tools:text="傭兵団の料理番"
        />

    <TextView
        android:id="@+id/text_edit_snippet__page_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toTopOf="@+id/input_text_edit_snippet__content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_snippet__title"
        app:layout_constraintVertical_weight="1"
        tools:text="第２章３０ページ"
        />

    <EditText
        android:id="@+id/input_text_edit_snippet__content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:ems="10"
        android:fadeScrollbars="false"
        android:gravity="top|start"
        android:hint="@string/edit_snippet__input_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="7"
        android:maxLines="7"
        android:padding="5dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/text_edit_snippet__warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_snippet__page_ref"
        app:layout_constraintVertical_weight="5"
        tools:text="つまり、現代の日本ではヽ普通は体験てきなレ現場に出くわしてしるわけてす。"
        />

    <TextView
        android:id="@+id/text_edit_snippet__warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/read_sentence__warning_red"
        android:textSize="@dimen/small_text"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/button_edit_snippet__cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_text_edit_snippet__content"
        tools:text="Cannot be blank"
        tools:visibility="visible"
        />

    <Button
        android:id="@+id/button_edit_snippet__cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_edit_snippet__complete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_snippet__warning"
        app:layout_constraintVertical_weight="1"
        />

    <Button
        android:id="@+id/button_edit_snippet__complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="@+id/button_edit_snippet__cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_edit_snippet__cancel"
        app:layout_constraintTop_toTopOf="@id/button_edit_snippet__cancel"
        app:layout_constraintVertical_weight="1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>